bin/tests/snapshots/ruff__0958032c62fe865f7da28683d7efe70b_lint_errfmt.snap
---
source: bin/tests/ruff.rs
---
let myTest = ''
  start_all()
  machine.succeed("true")
''; in { nodes.server = {}; testScript = myTest; }
---
