bin/tests/snapshots/ruff__24cc12f18c095b436ea3af91346b6276_fix.snap
---
source: bin/tests/ruff.rs
---
{ nodes.web-server = { }; testScript = ''
  import os
  start_all()
  web_server.wait_for_unit("nginx")
  with subtest("x"):
    machine.succeed("true")
  undefined_helper()
''; }
---
