bin/tests/snapshots/ruff__79abf06ff1be95149b38345a74fdaee8_lint_stderr.snap
---
source: bin/tests/ruff.rs
---
{ system.build.testScript = ''
  set -euxo pipefail
  curl -sSf http://127.0.0.1:8000/
''; }
---
