bin/tests/snapshots/ruff__c5690750a058b39a656c2e2a360ea7fc_fix.snap
---
source: bin/tests/ruff.rs
---
{ nodes."2nd-host" = {}; nodes."web.example" = {}; testScript = ''
  _nd_host.succeed("true")
  web_example.succeed("true")
  machine.succeed("true")
''; }
---
