bin/tests/snapshots/ruff__de01b96d278b7ac640c731ed08bbbac1_lint_errfmt.snap
---
source: bin/tests/ruff.rs
---
{ a = { nodes.server = {}; testScript = ''machine.start()''; }; b = { nodes.client = {}; testScript = ''machine.start()''; }; }
---
